--- a/views/add-product.html
+++ b/views/add-product.html
@@ -20,7 +20,7 @@
 
     <main>
         <form action="/admin/add-product" method="POST">
-            <input type="text" name="title">
+            <input type="text" name="title" placeholder="enter title" >
             <button type="submit">Add Product</button>
         </form>
     </main>
