--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -10,7 +10,9 @@
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <input type="text" name="title" id="title" 
+                placeholder="enter title"
+                required>
             </div>
 
             <button class="btn" type="submit">Add Product</button>
