--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -3,6 +3,6 @@
 <body>
     <%- include('../includes/navigation.ejs') %>
     <main>
-        <h1>Checkout Page</h1>
+        <h1>Orders Page</h1>
     </main>
 <%- include('../includes/end.ejs') %>
