--- a/public/css/product.css
+++ b/public/css/product.css
@@ -2,11 +2,13 @@
     width: 20rem;
     max-width: 90%;
     margin: auto;
+    display: block;
 }
 
 .product-item {
     width: 20rem;
     max-width: 95%;
+    margin: 1rem;
 }
 
 .product__title {
@@ -21,5 +23,5 @@
 }
 
 .product__description {
-    text-align: justify;
+    text-align: center;
 }
