--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -18,15 +18,11 @@
                                 alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$ <%= product.price %></h2>
-                            <p class="product__description">
-                                <%= product.description %>
-                            </p>
+                            <h2 class="product__price">$<%= product.price %></h2>
+                            <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <form action="/add-to-cart" method="post">
-                                <button type="submit" class="btn">Add to Cart</button>
-                            </form>
+                            <button class="btn">Add to Cart</button>
                         </div>
                     </article>
                 <% } %>
