--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -24,7 +24,8 @@
                             </p>
                         </div>
                         <div class="card__actions">
-                            <a href="/admin/edit-product" class="btn" >Edit</a>
+                            <a href="/admin/edit-product/<%= product.id %>?edit=true" 
+                                class="btn" >Edit</a>
                             <form action="/admin/delete-product" method="post">
                                 <button type="submit" class="btn" >Delete</button>
                             </form>
