--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -27,6 +27,8 @@
                             <a href="/admin/edit-product/<%= product.id %>?edit=true" 
                                 class="btn" >Edit</a>
                             <form action="/admin/delete-product" method="post">
+                                <input type="hidden" name="productId" 
+                                value="<%=product.id%>" >
                                 <button type="submit" class="btn" >Delete</button>
                             </form>
                         </div>
