--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -4,6 +4,18 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <h1>Your Cart</h1>
+            <% if(products.length>0) {%>
+                <ul>
+
+                    <% products.forEach(p=>{%>
+                        <li>
+                            <%= p.productData.title %> (<%=p.qty%>)
+                        </li>
+                    <%}) %>
+                </ul>
+
+            <%}else{%>
+                <h1>Your cart is empty!</h1>
+            <%} %>
         </main>
         <%- include('../includes/end.ejs') %>
