--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -24,11 +24,11 @@
                             </p>
                         </div>
                         <div class="card__actions">
-                            <a href="/admin/edit-product/<%= product.id %>?edit=true" 
+                            <a href="/admin/edit-product/<%= product._id %>?edit=true" 
                                 class="btn" >Edit</a>
                             <form action="/admin/delete-product" method="post">
                                 <input type="hidden" name="productId" 
-                                value="<%=product.id%>" >
+                                value="<%=product._id%>" >
                                 <button type="submit" class="btn" >Delete</button>
                             </form>
                         </div>
