--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,4 @@
 <form action="/cart" method="post">
-    <input type="hidden" name="productId" id="productId" value="<%= product.id %>" >
+    <input type="hidden" name="productId" id="productId" value="<%= product._id %>" >
     <button type="submit" class="btn" >Add to Cart</button>
 </form>
