--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,8 +19,16 @@ form {
   display: inline;
 }
 
-.centered{
+.centered {
   text-align: center;
+}
+
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
 }
 
 .main-header {
@@ -166,9 +174,9 @@ form {
 }
 
 .card__image img {
-  /* width: 100%; */
-  width: 320px;
+  width: 100%;
   height: 200px;
+  max-width: 400px;
 }
 
 .card__actions {
@@ -196,6 +204,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
