--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,33 +1,32 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <% if(products.length>0) {%>
-                <ul>
-
-                    <% products.forEach(p=>{%>
-                        <li>
-                            <div>
-                                <p>
-                                    <%= p.title %> (<%=p.quantity%>)
-                                </p>
-                                <form action="/delete-cart-item" method="post">
-                                    <input type="hidden" name="productId" value="<%=p._id%>" >
-                                    <button type="submit" class="btn" >Delete</button>
-                                </form>
-                            </div>
-
+            <% if (products.length > 0) { %>
+                <ul class="cart__item-list">
+                    <% products.forEach(p => { %>
+                        <li class="cart__item">
+                            <h1><%= p.title %></h1>
+                            <h2>Quantity: <%= p.quantity %></h2>
+                            <form action="/delete-cart-item" method="POST">
+                                <input type="hidden" value="<%= p._id %>" name="productId">
+                                <button class="btn danger" type="submit">Delete</button>
+                            </form>
                         </li>
-                    <%}) %>
+                    <% }) %>
                 </ul>
                 <hr>
-                <form action="/create-order" method="post">
-                    <button type="submit" class="btn" >Order Now!</button>
-                </form>
-            <%}else{%>
-                <h1>Your cart is empty!</h1>
-            <%} %>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
+                
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
