--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -28,8 +28,13 @@
         </ul>
         <ul class="main-header__item-list">
             <li class="main-header__item">
-                <a class="<%= path === '/orders' ? 'active' : '' %>" href="/login">Login
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
                 </a>
+            </li>
+            <li class="main-header__item">
+                <form action="/logout" method="post">
+                    <button class="btn" >Logout</button>
+                </form>
             </li>
         </ul>
     </nav>
@@ -62,6 +67,11 @@
         <li class="mobile-nav__item">
             <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
             </a>
+        </li>
+        <li class="mobile-nav__item">
+            <form action="/logout" method="post">
+                <button class="btn" >Logout</button>
+            </form>
         </li>
     </ul>
 </nav>
