--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,33 +9,37 @@
             <li class="main-header__item">
                 <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
             </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
-            </li>
-            <li class="main-header__item">
-                <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
-            </li>
-            <% if(isAuth){%>
-                <li class="main-header__item">
-                    <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
-                    </a>
-                </li>
-                <li class="main-header__item">
-                    <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
-                    </a>
-                </li>
-            <%} %>
+            <% if(isAuth){ %>
+                    <li class="main-header__item">
+                        <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+                    </li>
+                    <li class="main-header__item">
+                        <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+                    </li>
+                    <li class="main-header__item">
+                        <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add
+                            Product
+                        </a>
+                    </li>
+                    <li class="main-header__item">
+                        <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
+                        </a>
+                    </li>
+                <%} %>
         </ul>
         <ul class="main-header__item-list">
-            <li class="main-header__item">
-                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
-                </a>
-            </li>
-            <li class="main-header__item">
-                <form action="/logout" method="post">
-                    <button class="btn" >Logout</button>
-                </form>
-            </li>
+            <% if(!isAuth){%>
+                <li class="main-header__item">
+                    <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
+                    </a>
+                </li>
+                <%} else { %>
+                    <li class="main-header__item">
+                        <form action="/logout" method="post">
+                            <button class="btn">Logout</button>
+                        </form>
+                    </li>
+                <%} %>
         </ul>
     </nav>
 </header>
@@ -48,6 +52,8 @@
         <li class="mobile-nav__item">
             <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
         </li>
+        <% if(isAuth){ %>
+
         <li class="mobile-nav__item">
             <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
         </li>
@@ -62,16 +68,23 @@
             <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
             </a>
         </li>
+        <%} %>
+
     </ul>
     <ul class="mobile-nav__item-list">
+        <% if(!isAuth){%>
+
         <li class="mobile-nav__item">
             <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login
             </a>
         </li>
+        <%} else { %>
         <li class="mobile-nav__item">
             <form action="/logout" method="post">
-                <button class="btn" >Logout</button>
+                <button class="btn">Logout</button>
             </form>
         </li>
+        <%} %>
+
     </ul>
 </nav>
