--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -8,10 +8,12 @@
             <h1> <%= product.title %> </h1>
             <hr>
             <div class="card__image">
-                <img src="<%= product.imageUrl %>" alt="<%= product.title%>">
+                <img width="400" src="<%= product.imageUrl %>" alt="<%= product.title%>">
             </div>
             <h2> <%= product.price %> </h2>
             <p> <%= product.description %> </p>
-            <%- include('../includes/add-to-cart.ejs', {product:product}) %>
-        </main>
+            <% if(isAuth){%>
+                <%- include('../includes/add-to-cart.ejs', {product:product}) %>
+            <%}%>
+</main>
 <%- include('../includes/end.ejs') %>
