adding signup page

--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -7,7 +7,7 @@
         <main class="centered">
             <h1> <%= product.title %> </h1>
             <hr>
-            <div class="card__image">
+            <div class="image">
                 <img width="400" src="<%= product.imageUrl %>" alt="<%= product.title%>">
             </div>
             <h2> <%= product.price %> </h2>
