--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -10,20 +10,12 @@
         <% if(errorMsg){ %>
             <div class="user-message user-message--error"> <%= errorMsg %> </div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/reset-password" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <button class="btn" type="submit">Login</button>
-            <hr>
-            <div>
-                <a href="/reset-password">Reset Password</a>
-            </div>
+            <button class="btn" type="submit">Reset Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
