--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -11,7 +11,8 @@
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
         <form class="product-form" 
-        action="/admin/<%= editing ? 'edit-product' : 'add-product' %>" method="POST">
+        action="/admin/<%= editing ? 'edit-product' : 'add-product' %>" 
+        method="POST" enctype="multipart/form-data" >
             <div class="form-control">
                 <label for="title">Title</label>
                 <input 
@@ -21,12 +22,16 @@
                 value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Image URL</label>
-                <input 
+                <label for="image">Image</label>
+                <!-- <input 
                 class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>"
                 type="text" name="imageUrl" 
                 id="imageUrl" 
-                value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
+                value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>"> -->
+                <input 
+                type="file" 
+                name="image" 
+                id="image">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
