--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -26,20 +26,21 @@
                         <div class="card__actions">
                             <a href="/admin/edit-product/<%= product._id %>?edit=true" 
                                 class="btn" >Edit</a>
-                            <form action="/admin/delete-product" method="post">
+                            <!-- <form action="/admin/delete-product" method="post"> -->
                                 <input type="hidden" name="productId" 
                                 value="<%=product._id%>" >
-                                <button type="submit" class="btn" >Delete</button>
-                            </form>
+                                <button type="submit" class="btn" onclick="deleteProduct(this)" >Delete</button>
+                            <!-- </form> -->
                         </div>
                     </article>
-                <% } %>
+               
             </div>
             <%- include('../includes/pagination.ejs', 
             {currentPage, hasNextPage, hasPrevPage, nextPage, prevPage, lastPage}) %>
-
+            <% } %>
         <% } else { %>
             <h1>No Products Found!</h1>
         <% } %>
     </main>
+    <script src="/js/admin.js"></script>
 <%- include('../includes/end.ejs') %>
